# rpn-calculator

./: .gitignore  README.md  docker-compose.yml
back/: .dockerignore  .editorconfig  .gitignore  Dockerfile  alembic.ini  pyproject.toml  tox.ini
back/.tools-cfg/: whitelist-dict.dic
back/app/: __main__.py  main.py  models.py  rpn_calculator.py
back/app/api/: exceptions_handler.py
back/app/api/api_v0/: api.py  schemas.py
back/app/controllers/: rpn_calculator.py
back/app/core/: config.py  database.py
back/app/errors/: app_errors.py
back/migrations/versions/: 87d90d607cf5_create_rpn_calculations_table.py
back/tests/unit/: rpn_algorithm.py  test_api_calculate.py  test_api_get_csv.py  test_csv.db
front/: Dockerfile  package-lock.json  package.json
front/src/: App.js  CalculateForm.js
