[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Daniel Pelati <p8daniel@gmail.com>"]
readme = "README.md"
classifiers =[
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
asgi-correlation-id = "^4.2.0"
pydantic-settings = "^2.0.3"
starlette-exporter = "^0.16.0"
alembic = "^1.13.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pandas = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
tox-poetry = "^0.5.0"
tox = "^3.28.0"
httpx = "^0.25.0"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
